fix provista and header overlapping

--- a/src/shared/components/layouts/styles/side-bar-layout.scss
+++ b/src/shared/components/layouts/styles/side-bar-layout.scss
@@ -51,7 +51,6 @@
 
   &__sidebar-content {
     &--empty {
-      width: 100px;
       height: 100%;
       background-color: $colour-platinum;
     }
